@@ -3,6 +3,7 @@ Version 1.11.9+dev:
    * Updated translations:
  * GUI2
    * Added: FAI-function handling in GUI2 widgets.
+   * Added: A new tooltip window.
  * Miscellaneous and bug fixes:
    * Fixed: A compilation warning with DEBUG_WINDOW_LAYOUT_GRAPHS.
 
